--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .idea*
 htmlcov*
 __*
-SuperTool/venv*
-SuperTool/src/supertool*
-SuperTool/log*
-Supertool/src/tests/tmp*  
+supertool/venv*
+supertool/src/supertool*
+supertool/log*
+supertool/src/tests/tmp*  
 Downloader/venv*
 Downloader/temp*
 Downloader/pictures.txt
